# LogPulse

./: .gitignore  CMakeLists.txt  codeeditor.cpp  codeeditor.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  settingsdialog.cpp  settingsdialog.h
styles/: style.qss
translations/: LogPulse_en_US.ts  LogPulse_zh_CN.ts
